--- a/library-center/library-center/Site.Master
+++ b/library-center/library-center/Site.Master
@@ -38,6 +38,21 @@
         #bannerAlertTax {
             margin-top: 30px;
         }
+
+        #buttonReservation{
+            margin-right: 15px;
+            margin-left: 90px;
+        }
+
+        #buttonLoan{
+            margin-right: 15px;
+            margin-left: 90px;
+        }
+
+         #titleCatalog {
+            margin-bottom: 20px;
+            margin-top: 20px;
+        }
     </style>
 
 </head>
@@ -63,7 +78,7 @@
             </Scripts>
         </asp:ScriptManager>
 
-        <div class="collapse bg-dark navbarHeader" id="navbarHeader">
+        <div class="collapse bg-primary navbarHeader" id="navbarHeader">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-8 col-md-7 py-4">
@@ -79,7 +94,7 @@
                 </div>
             </div>
         </div>
-        <div class="navbar navbar-dark bg-dark shadow-sm"id="navbarHome">
+        <div class="navbar navbar-dark bg-primary shadow-sm"id="navbarHome">
             <div class="container d-flex justify-content-between">
                 <a href="#" class="navbar-brand d-flex align-items-center">
                      <img src="https://freesvg.org/img/manbookframe.png" width="50" height="50" class="d-inline-block align-top" alt="Car vector logo">
