--- a/library-center/library-center/Site.Master
+++ b/library-center/library-center/Site.Master
@@ -83,7 +83,7 @@
                 <div class="row">
                     <div class="col-sm-8 col-md-7 py-4">
                         <h4 class="text-white">Acerca de</h4>
-                        <p class="text-muted">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <p class="text-white">LA BIBLIOTECA, impulsamos a los escritores y editores independientes contribuyen a que su arte llegue a más lectores, sin realizar mayor inversión.</p>
                     </div>
                     <div class="col-sm-4 offset-md-1 py-4">
                         <h4 class="text-white">Contacto</h4>
